--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                             <a class="nav-link" href="/free-nodes/">免费节点</a>
                         </li>
                                                 <li class="nav-item">
+                            <a class="nav-link" href="/paid-subscribe/">推荐机场</a>
+                        </li>
+                                                <li class="nav-item">
                             <a class="nav-link" href="#">关于</a>
                         </li>
                         <li class="nav-item">
@@ -102,6 +105,23 @@
                     <div class="col-md-8">
                         <h3 class="title-big mb-sm-5 mb-4">最近更新</h3>
                         <div class="xcblog-blog-list">
+                                                        <div class="row xcblog-blog-item" data-date="2024-11-15">
+                                <div class="col-lg-4">
+                                    <div class="position-relative">
+                                        <a href="/free-nodes/2024-11-15-clash-windows.htm" class="xcblog-blog-url">
+                                            <img src="/uploads/20240214/5609cbe4a2710c44400fb8b4e8928ba9.webp" alt="11月15日更新20.6M/S，2024年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点订阅" class="radius-image img-fluid">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-8 mt-lg-0 mt-5">
+                                    <a href="/free-nodes/2024-11-15-clash-windows.htm" class="xcblog-blog-url">
+                                        <h3 class="title-big xcblog-blog-title">11月15日更新20.6M/S，2024年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点订阅</h3>
+                                    </a>
+                                    <p class="mt-4">这一次的节点更新覆盖了日本、韩国、加拿大、美国、欧洲、香港、新加坡等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                        11月15日                                    </p>
+                                </div>
+                            </div>
                                                         <div class="row xcblog-blog-item" data-date="2024-11-14">
                                 <div class="col-lg-4">
                                     <div class="position-relative">
@@ -425,23 +445,6 @@
                                         10月27日                                    </p>
                                 </div>
                             </div>
-                                                        <div class="row xcblog-blog-item" data-date="2024-10-26">
-                                <div class="col-lg-4">
-                                    <div class="position-relative">
-                                        <a href="/free-nodes/2024-10-26-node-share.htm" class="xcblog-blog-url">
-                                            <img src="/uploads/20240214/830880c859159c166b79b0f24c26ce86.webp" alt="10月26日更新22.1M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅" class="radius-image img-fluid">
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-8 mt-lg-0 mt-5">
-                                    <a href="/free-nodes/2024-10-26-node-share.htm" class="xcblog-blog-url">
-                                        <h3 class="title-big xcblog-blog-title">10月26日更新22.1M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</h3>
-                                    </a>
-                                    <p class="mt-4">这一次的节点更新覆盖了欧洲、日本、新加坡、香港、加拿大、美国、韩国等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                        10月26日                                    </p>
-                                </div>
-                            </div>
                                                     </div>
                     </div>
                     <div class="col-md-4 w3l-services">
@@ -450,8 +453,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-8-4-free-node-subscribe-links.htm">8月4日更新20.2M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、美国、韩国、香港、欧洲、新加坡、加拿大等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-6-1-clash-v2ray-ss-ssr.htm">6月1日更新19.4M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、韩国、加拿大、日本、欧洲、新加坡、香港等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -460,8 +463,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-12-free-subscribe-node.htm">11月12日更新21.6M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、美国、日本、香港、欧洲、韩国、新加坡等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-11-9-free-high-speed-nodes.htm">11月9日更新19.9M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、韩国、加拿大、新加坡、美国、香港、欧洲等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -470,8 +473,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-3-10-node-share-links.htm">3月10日19M/S|Clash/SSR/V2ray/Shadowrocket免费节点每天更新订阅链接</a></h4>
-                <p>这一次的节点更新覆盖了日本、香港、加拿大、美国、新加坡、欧洲、韩国等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-9-21-free-ssr-node.htm">9月21日更新18.7M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、韩国、日本、加拿大、欧洲、香港、美国等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -480,8 +483,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-6-14-free-node-subscribe.htm">6月14日更新18.1M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、日本、欧洲、加拿大、韩国、新加坡、香港等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-2-23-shadowrocket-node.htm">2月23日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、韩国、新加坡、加拿大、日本、美国、香港等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -490,8 +493,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-6-10-free-ssr-subscribe.htm">6月10日更新19.6M/S，2024年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、香港、欧洲、美国、加拿大、新加坡、韩国等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-9-free-subscribe-node.htm">10月9日更新21.1M/S，2024年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、新加坡、韩国、日本、香港、欧洲、加拿大等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -500,8 +503,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-4-19-free-ssr-subscribe.htm">4月19日更新19.7M/S，2024年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、韩国、美国、日本、香港、欧洲、加拿大等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-4-13-free-node-subscribe.htm">4月13日更新22.4M/S，2024年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点</a></h4>
+                <p>这一次的节点更新覆盖了日本、新加坡、香港、欧洲、韩国、加拿大、美国等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -510,8 +513,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-22-clash-node-daily-updates.htm">10月22日更新19.5M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、香港、韩国、美国、加拿大、欧洲、日本等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-6-2-free-ssr-node.htm">6月2日更新23M/S，2024年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、美国、日本、加拿大、欧洲、韩国、香港等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -520,8 +523,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-5-free-shadowrocket-node.htm">11月5日更新20.6M/S，2024年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、韩国、日本、香港、新加坡、欧洲、美国等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-6-15-free-node-subscribe.htm">6月15日更新23M/S，2024年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、美国、香港、加拿大、日本、韩国、新加坡等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -530,8 +533,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-8-15-clash-node.htm">8月15日更新22.1M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了香港、欧洲、美国、日本、新加坡、加拿大、韩国等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-9-6-free-ssr-subscribe.htm">9月6日更新20.4M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、香港、新加坡、加拿大、韩国、日本、美国等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -540,8 +543,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-5-17-clash-node.htm">5月17日更新21.2M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、加拿大、香港、新加坡、欧洲、美国、韩国等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-9-8-free-v2ray.htm">9月8日更新21.2M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、日本、欧洲、韩国、香港、加拿大、美国等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -552,7 +555,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
